# Multigrid

./: .gitignore  CMakeLists.txt  README.md  includes.h  matrix.cpp  matrix.h  mgm.cpp  plot.plt  vector.cpp  vector.h
include/: includes.h  mgm.h
source/: main.cpp  mgm.cpp
